--- a/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
+++ b/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
@@ -171,7 +171,7 @@ node_types:
 
   openstack.nodes.Keypair: # os_keypair
     derived_from: openstack.nodes.Root
-    attributes:
+    properties:
       name:
         type: string
         required: true
