--- a/launcher-templates/slaves-with-ip-pool.yaml
+++ b/launcher-templates/slaves-with-ip-pool.yaml
@@ -2,14 +2,14 @@ tosca_definitions_version: tosca_simple_yaml_1_0
 
 topology_template:
   node_templates:
-    node_master:
+    node_slaves:
       type: tosca.nodes.Compute
       properties:
         keypair: "{{ os_key_name }}"
-        meta: "hostname={{ cluster_name }}-master,group={{ cluster_name }}_master"
+        meta: "hostname={{ item }}-slaves,group={{ cluster_name }}_slaves"
         boot_from_volume: "{{ boot_from_volume }}"
       attributes:
-        tosca_name: "{{ cluster_name }}-master"
+        tosca_name: "{{ cluster_name }}-slave"
         networks:
           default:
             network_name: "{{ virtual_network }}"
@@ -18,7 +18,7 @@ topology_template:
       capabilities:
         host:
           properties:
-            tosca_id: "{{ master_flavor }}"
+            tosca_id: "{{ slaves_flavor }}"
         endpoint:
           properties:
             protocol: tcp
@@ -33,3 +33,6 @@ topology_template:
         os:
           properties:
             tosca_id: "{{ os_image }}"
+        scalable:
+          properties:
+            min_instances: "{{ n_slaves }}"
