Add Prepare interface for actions before node creation

--- a/toscatranslator/common/TOSCA_definition_1_0.yaml
+++ b/toscatranslator/common/TOSCA_definition_1_0.yaml
@@ -149,6 +149,8 @@ node_types:
     interfaces:
       Standard:
         type: tosca.interfaces.node.lifecycle.Standard
+      Prepare:
+        type: tosca.interfaces.node.Prepare
 
   tosca.nodes.Compute:
     description: >
@@ -889,6 +891,14 @@ interface_types:
       description: >
         Operation to notify source some property or attribute of the
         target changed
+
+  tosca.interfaces.node.Prepare:
+    description: >
+      The lifecycle interfaces define the essential, normative operations that must be executed before Node is created
+    derived_from: tosca.interfaces.Root
+    preconfigure:
+      description: Operation to pre-configure the node.
+
 
 ##########################################################################
  # Artifact Type.
